7022998: JSR 292 recursive method handle calls inline themselves infinitely

Reviewed-by: never, kvn